--- a/images.yml
+++ b/images.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://local-eureka-server:8761/eureka/
 
 spring:
   cloud:
