feat(config): set config server to localhost

--- a/images.yml
+++ b/images.yml
@@ -1,7 +1,9 @@
 eureka:
+  instance:
+    hostname: localhost
   client:
     serviceUrl:
-      defaultZone: http://local-eureka-server:8761/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
 spring:
   cloud:
