--- a/eureka.yml
+++ b/eureka.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: local-eureka-server
+    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
