--- a/hystrix-dashboard.yml
+++ b/hystrix-dashboard.yml
@@ -3,9 +3,13 @@ server:
 
 eureka:
   instance:
-    hostname: local-eureka-server
+    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+# eureka:
+#  instance:
+#    hostname: local-eureka-server
