--- a/images.yml
+++ b/images.yml
@@ -1,7 +1,5 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://local-eureka-server:8761/eureka/
+server:
+  port: 8080
 
 spring:
   cloud:
