--- a/comments.yml
+++ b/comments.yml
@@ -1,6 +1,11 @@
 server:
   port: 9000
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:password@localhost:8761/eureka/
+
 spring:
   cloud:
     stream:
