--- a/hystrix-dashboard.yml
+++ b/hystrix-dashboard.yml
@@ -2,13 +2,9 @@ server:
   port: 7979
 
 eureka:
-  instance:
-    hostname: localhost
   client:
-    registerWithEureka: false
-    fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:password@${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://user:password@localhost:8761/eureka/
 
 # eureka:
 #  instance:
