--- a/images.yml
+++ b/images.yml
@@ -1,5 +1,10 @@
 server:
-  port: 8080
+  port: 9090
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:password@localhost:8761/eureka/
 
 spring:
   cloud:
