--- a/chat.yml
+++ b/chat.yml
@@ -1,13 +1,63 @@
 server:
-  port: 8200
+  port: 9999
 
+#
+# details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
+management:
+  endpoints:
+    enabled-by-default: true
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
+        exclude: shutdown
+  endpoint:
+    health:
+      show-details: always
+  health:
+    defaults:
+      enabled: true
+# tag::secured[]
 eureka:
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:password@localhost:8761/eureka/
-
+      defaultZone: http://user:password@localhost:8761/eureka
+# end::secured[]
+# tag::zuul[]
 spring:
   cloud:
+    gateway:
+      routes:
+      # ========================================================
+      - id: imagesService
+        uri: lb://IMAGES
+        predicates:
+        - Path=/imagesService/**
+        filters:
+        - RewritePath=/imagesService/(?<segment>.*), /$\{segment}
+        - RewritePath=/imagesService, /
+        - SaveSession
+      - id: images
+        uri: lb://IMAGES
+        predicates:
+        - Path=/images/**
+        filters:
+        - SaveSession
+      - id: mainCss
+        uri: lb://IMAGES
+        predicates:
+        - Path=/main.css
+        filters:
+        - SaveSession
+      - id: commentsService
+        uri: lb://IMAGES
+        predicates:
+        - Path=/comments/**
+        filters:
+        - SaveSession
+# end::zuul[]
     stream:
       bindings:
         input:
@@ -24,3 +74,33 @@ spring:
         brokerToClient:
           destination: learning-spring-boot-chat-user-messages
           group: topic-chatMessages
+
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMG_PORT:5672}
+    username: ${RABBITMG_USERNAME:guest}
+    password: ${RABBITMG_PASSWORD:guest}
+
+  data:
+    mongodb:
+      host: ${MONGODB_HOST:localhost}
+      port: ${MONGODB_PORT:27017}
+      database: ${MONGODB_DB_NAME:lsb2db}
+
+# tag::security[]
+security:
+  sessions: always
+# end::security[]
+
+# tag::ribbon[]
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
+ribbon:
+  ConnectTimeout: 3000
+  ReadTimeout: 60000
+# end::ribbon[]
