--- a/comments.yml
+++ b/comments.yml
@@ -1,12 +1,50 @@
 server:
   port: 9000
 
+security:
+  sessions: never
+  user:
+    password: password
+  
+#
+# details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
+management:
+  endpoints:
+    enabled-by-default: true
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
+        exclude: shutdown
+  endpoint:
+    health:
+      show-details: always
+  health:
+    defaults:
+      enabled: true
+
+# tag::secured[]
 eureka:
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://user:password@localhost:8761/eureka/
-
+# end::secured[]
+  
 spring:
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMG_PORT:5672}
+    username: ${RABBITMG_USERNAME:guest}
+    password: ${RABBITMG_PASSWORD:guest}
+
+  data:
+    mongodb:
+      host: ${MONGODB_HOST:localhost}
+      port: ${MONGODB_PORT:27017}
+      database: ${MONGODB_DB_NAME:lsb2db}
+
   cloud:
     stream:
       bindings:
