--- a/hystrix-dashboard.yml
+++ b/hystrix-dashboard.yml
@@ -1,11 +1,29 @@
 server:
   port: 7979
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://user:password@localhost:8761/eureka/
+#
+# details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
+management:
+  endpoints:
+    enabled-by-default: true
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
+        exclude: shutdown
+  endpoint:
+    health:
+      show-details: always
+  health:
+    defaults:
+      enabled: true
 
-# eureka:
-#  instance:
-#    hostname: local-eureka-server
+eureka:
+  instance:
+    hostname: localhost
+    port: 8761
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
