--- a/images.yml
+++ b/images.yml
@@ -1,10 +1,44 @@
 server:
-  port: 9090
+  port: 8200
 
+# tag::security[]
+security:
+  sessions: never
+# end::security[]
+
+# tag::ribbon[]
+images:
+  commentsUser: user
+  commentsPassword: password
+# end::ribbon[]
+
+#
+# details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
+management:
+  endpoints:
+    enabled-by-default: true
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
+        exclude: shutdown
+  endpoint:
+    health:
+      show-details: always
+  health:
+    defaults:
+      enabled: true
+
+# tag::secured[]
 eureka:
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://user:password@localhost:8761/eureka/
+    instance:
+      hostname: localhost
+# end::secured[]
 
 spring:
   cloud:
@@ -14,4 +48,16 @@ spring:
           destination: learning-spring-boot-comments
           group: comments-service
           content-type: application/json
-  
+ 
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMG_PORT:5672}
+    username: ${RABBITMG_USERNAME:guest}
+    password: ${RABBITMG_PASSWORD:guest}
+
+  data:
+    mongodb:
+      host: ${MONGODB_HOST:localhost}
+      port: ${MONGODB_PORT:27017}
+      database: ${MONGODB_DB_NAME:lsb2db}
+ 
