--- a/images.yml
+++ b/images.yml
@@ -35,6 +35,8 @@ eureka:
 
 spring:
   cloud:
+    config:
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
     stream:
       bindings:
         output:
