--- a/comments-local.yml
+++ b/comments-local.yml
@@ -5,8 +5,11 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:password@local-eureka-server:8080/eureka/
+      defaultZone: ${EUREKA_SERVER_URI:http://user:password@local-eureka-server:8080/eureka}
 spring:
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER_URI:http://local-config-server:8080}
   devtools:
     remote:
       debug:
