--- a/eureka-local.yml
+++ b/eureka-local.yml
@@ -1,5 +1,9 @@
 server:
   port: 8080
+spring:
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER_URI:http://local-config-server:8080}
 eureka:
   instance:
     hostname: local-eureka-server
