--- a/eureka.yml
+++ b/eureka.yml
@@ -1,5 +1,9 @@
 server:
   port: 8761
+spring:
+  cloud:
+    config:
+      uri: http://localhost:8888
 #
 # details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
 management:
