--- a/hystrix-dashboard.yml
+++ b/hystrix-dashboard.yml
@@ -26,3 +26,8 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+
+spring:
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
