--- a/images-local.yml
+++ b/images-local.yml
@@ -5,11 +5,11 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: ${EUREKA_SERVER_URI:http://user:password@local-eureka-server:8080/eureka/}
+      defaultZone: ${EUREKA_SERVER_URI}
 spring:
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URI:http://local-config-server:8080}
+      uri: ${CONFIG_SERVER_URI}
   devtools:
     remote:
       debug:
