--- a/images-local.yml
+++ b/images-local.yml
@@ -5,11 +5,11 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: ${EUREKA_SERVER_URI:http://user:password@lsb2-eureka-server}
+      defaultZone: ${EUREKA_SERVER_URI:http://user:password@lsb2-eureka-server.local.svc.cluster.local}
 spring:
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URI:http://lsb2-config-server}
+      uri: ${CONFIG_SERVER_URI:http://lsb2-config-server.local.svc.cluster.local}
   devtools:
     remote:
       debug:
