--- a/eureka-local.yml
+++ b/eureka-local.yml
@@ -3,12 +3,12 @@ server:
 spring:
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URI:http://local-config-server:8080}
+      uri: http://lsb2-config-server
 eureka:
   instance:
-    hostname: local-eureka-server
+    hostname: lsb2-eureka-server
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:password@${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://user:password@lsb2-eureka-server
