--- a/hystrix-dashboard-local.yml
+++ b/hystrix-dashboard-local.yml
@@ -2,14 +2,14 @@ server:
   port: 8080
 eureka:
   instance:
-    hostname: local-eureka-server
+    hostname: lsb2-eureka-server
     port: 8080
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+      defaultZone: http://lsb2-eureka-server
 spring:
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URI:http://local-config-server:8080}
+      uri: ${CONFIG_SERVER_URI:http://lsb2-config-server}
