--- a/images.yml
+++ b/images.yml
@@ -28,15 +28,15 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:password@localhost:8761/eureka/
+      defaultZone: http://user:password@lsb2-eureka-server:8761
     instance:
-      hostname: localhost
+      hostname: lsb2-eureka-server
 # end::secured[]
 
 spring:
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
+      uri: http://lsb2-config-server:8888
     stream:
       bindings:
         output:
@@ -45,14 +45,14 @@ spring:
           content-type: application/json
  
   rabbitmq:
-    host: ${RABBITMQ_HOST:localhost}
+    host: ${RABBITMQ_HOST:local-rabbitmq}
     port: ${RABBITMG_PORT:5672}
     username: ${RABBITMG_USERNAME:guest}
     password: ${RABBITMG_PASSWORD:guest}
 
   data:
     mongodb:
-      host: ${MONGODB_HOST:localhost}
+      host: ${MONGODB_HOST:local-mongodb-server:27017}
       port: ${MONGODB_PORT:27017}
       database: ${MONGODB_DB_NAME:lsb2db}
  
