--- a/eureka.yml
+++ b/eureka.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8761
+  port: 8080
 spring:
   cloud:
     config:
-      uri: http://lsb2-config-server:8888
+      uri: http://lsb2-config-server:8080
 #
 # details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
 management:
@@ -24,8 +24,9 @@ management:
 eureka:
   instance:
     hostname: lsb2-eureka-server
+    port: 8080
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:password@${eureka.instance.hostname}:${server.port}
+      defaultZone: http://user:password@lsb2-eureka-server:8080
