--- a/eureka-local.yml
+++ b/eureka-local.yml
@@ -11,4 +11,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:password@lsb2-eureka-server
+      defaultZone: http://user:password@lsb2-eureka-server/eureka/
