--- a/hystrix-dashboard.yml
+++ b/hystrix-dashboard.yml
@@ -25,7 +25,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://lsb2-eureka-server:8080
+      defaultZone: http://lsb2-eureka-server:8080/eureka/
 
 spring:
   cloud:
