--- a/images-local.yml
+++ b/images-local.yml
@@ -5,7 +5,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: ${EUREKA_SERVER_URI:http://user:password@lsb2-eureka-server}
+      defaultZone: ${EUREKA_SERVER_URI:http://user:password@lsb2-eureka-server/eureka/}
 spring:
   cloud:
     config:
