--- a/images.yml
+++ b/images.yml
@@ -28,7 +28,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:password@lsb2-eureka-server:8080
+      defaultZone: http://user:password@lsb2-eureka-server:8080/eureka/
     instance:
       hostname: lsb2-eureka-server
 # end::secured[]
