--- a/comments-local.yml
+++ b/comments-local.yml
@@ -5,18 +5,18 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:password@lsb2-eureka-server.local.svc.cluster.local/eureka/
+      defaultZone: http://user:password@lsb2-eureka-server/eureka/
 spring:
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URI:http://lsb2-config-server.local.svc.cluster.local}
+      uri: ${CONFIG_SERVER_URI:http://lsb2-config-server}
   devtools:
     remote:
       debug:
         local-port: 49000
       secret: thisismysecret
   rabbitmq:
-    host: ${RABBITMQ_HOST:local-rabbitmq.local.svc.cluster.local}
+    host: ${RABBITMQ_HOST:local-rabbitmq}
     port: ${RABBITMG_PORT:5672}
     username: ${RABBITMG_USERNAME:guest}
     password: ${RABBITMG_PASSWORD:guest}
