feat(config): update platform infrastructure

--- a/chat-local.yml
+++ b/chat-local.yml
@@ -18,12 +18,12 @@ spring:
         local-port: 49999
       secret: thisismysecret
   rabbitmq:
-    host: ${RABBITMQ_HOST:local-rabbitmq}
+    host: ${RABBITMQ_HOST:rabbitmq.default}
     port: ${RABBITMG_PORT:5672}
     username: ${RABBITMG_USERNAME:guest}
     password: ${RABBITMG_PASSWORD:guest}
   data:
     mongodb:
-      host: ${MONGODB_HOST:local-mongo-server}
+      host: ${MONGODB_HOST:mongo-server.default}
       port: ${MONGODB_PORT:27017}
       database: ${MONGODB_DB_NAME:lsb2db}
