--- a/lsb2-comments-local.yml
+++ b/lsb2-comments-local.yml
@@ -5,25 +5,26 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:password@lsb2-eureka-server/eureka/
+      defaultZone: ${EUREKA_SERVER_URI:http://user:password@lsb2-eureka-server/eureka/}
 spring:
   cloud:
     config:
       uri: ${CONFIG_SERVER_URI:http://lsb2-config-server}
   devtools:
+    livereload:
+      enabled: true
     remote:
       debug:
         local-port: 49000
       secret: thisismysecret
   rabbitmq:
-    host: ${RABBITMQ_HOST:rabbitmq.local}
+    host: ${RABBITMQ_HOST:rabbitmq.default}
     port: ${RABBITMG_PORT:5672}
     username: ${RABBITMG_USERNAME:guest}
     password: ${RABBITMG_PASSWORD:guest}
-
   data:
     mongodb:
-      host: ${MONGODB_HOST:mongo-server.local}
+      host: ${MONGODB_HOST:mongo-server.default}
       port: ${MONGODB_PORT:27017}
       database: ${MONGODB_DB_NAME:lsb2db}
 
