--- a/lsb2-images-local.yml
+++ b/lsb2-images-local.yml
@@ -11,18 +11,20 @@ spring:
     config:
       uri: ${CONFIG_SERVER_URI:http://lsb2-config-server}
   devtools:
+    livereload:
+      enabled: true
     remote:
       debug:
         local-port: 48200
       secret: thisismysecret
   rabbitmq:
-    host: ${RABBITMQ_HOST:rabbitmq.local}
+    host: ${RABBITMQ_HOST:rabbitmq.default}
     port: ${RABBITMG_PORT:5672}
     username: ${RABBITMG_USERNAME:guest}
     password: ${RABBITMG_PASSWORD:guest}
 
   data:
     mongodb:
-      host: ${MONGODB_HOST:mongo-server.local}
+      host: ${MONGODB_HOST:mongo-server.default}
       port: ${MONGODB_PORT:27017}
       database: ${MONGODB_DB_NAME:lsb2db}
