fix(runtime): fix local startup configuration

--- a/lsb2-chat.yml
+++ b/lsb2-chat.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 9999
 #
 # details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
 management:
@@ -21,11 +21,11 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:password@lsb2-eureka-server:8080/eureka/
+      defaultZone: http://user:password@localhost:8761/eureka/
 spring:
   cloud:
     config:
-      uri: http://lsb2-config-server:8080
+      uri: http://localhost:8888
     gateway:
       discovery:
         locator:
@@ -75,13 +75,13 @@ spring:
           destination: learning-spring-boot-chat-user-messages
           group: topic-chatMessages
   rabbitmq:
-    host: ${RABBITMQ_HOST:local-rabbitmq}
+    host: ${RABBITMQ_HOST:localhost}
     port: ${RABBITMG_PORT:5672}
     username: ${RABBITMG_USERNAME:guest}
     password: ${RABBITMG_PASSWORD:guest}
   data:
     mongodb:
-      host: ${MONGODB_HOST:local-mongo-server}
+      host: ${MONGODB_HOST:localhost}
       port: ${MONGODB_PORT:27017}
       database: ${MONGODB_DB_NAME:lsb2db}
 
