--- a/lsb2-hystrix-dashboard.yml
+++ b/lsb2-hystrix-dashboard.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 7979
 #
 # details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
 management:
@@ -19,15 +19,15 @@ management:
 
 eureka:
   instance:
-    hostname: lsb2-eureka-server
-    port: 8080
+    hostname: localhost
+    port: 8761
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://lsb2-eureka-server:8080/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 spring:
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URI:http://lsb2-config-server:8080}
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
