--- a/lsb2-images.yml
+++ b/lsb2-images.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8200
 security:
   sessions: never
 images:
@@ -28,7 +28,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:password@lsb2-eureka-server:8080/eureka/
+      defaultZone: http://user:password@localhost:8761/eureka/
     instance:
       hostname: lsb2-eureka-server
 # end::secured[]
@@ -36,7 +36,7 @@ eureka:
 spring:
   cloud:
     config:
-      uri: http://lsb2-config-server:8080
+      uri: http://localhost:8888
     stream:
       bindings:
         output:
@@ -45,14 +45,14 @@ spring:
           content-type: application/json
  
   rabbitmq:
-    host: ${RABBITMQ_HOST:local-rabbitmq}
+    host: ${RABBITMQ_HOST:localhost}
     port: ${RABBITMG_PORT:5672}
     username: ${RABBITMG_USERNAME:guest}
     password: ${RABBITMG_PASSWORD:guest}
 
   data:
     mongodb:
-      host: ${MONGODB_HOST:local-mongo-server:27017}
+      host: ${MONGODB_HOST:localhost}
       port: ${MONGODB_PORT:27017}
       database: ${MONGODB_DB_NAME:lsb2db}
  
