--- a/lsb2-eureka.yml
+++ b/lsb2-eureka.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8080
+  port: 8761
 spring:
   cloud:
     config:
-      uri: http://lsb2-config-server:8080
+      uri: http://localhost:8888
 #
 # details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
 management:
@@ -23,10 +23,10 @@ management:
 
 eureka:
   instance:
-    hostname: lsb2-eureka-server
-    port: 8080
+    hostname: localhost
+    port: 8761
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:password@lsb2-eureka-server:8080/eureka/
+      defaultZone: http://user:password@localhost:8761/eureka/
