--- a/lsb2-chat.yml
+++ b/lsb2-chat.yml
@@ -16,12 +16,6 @@ management:
   health:
     defaults:
       enabled: true
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://user:password@localhost:8761/eureka/
 spring:
   cloud:
     config:
@@ -29,11 +23,11 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: true
+          enabled: false
       routes:
       # ========================================================
       - id: imagesService
-        uri: lb://lsb2-images
+        uri: http://localhost:8200
         predicates:
         - Path=/imagesService/**
         filters:
@@ -41,19 +35,19 @@ spring:
         - RewritePath=/imagesService, /
         - SaveSession
       - id: images
-        uri: lb://lsb2-images
+        uri: http://localhost:8200
         predicates:
         - Path=/images/**
         filters:
         - SaveSession
       - id: mainCss
-        uri: lb://lsb2-images
+        uri: http://localhost:8200
         predicates:
         - Path=/main.css
         filters:
         - SaveSession
       - id: commentsService
-        uri: lb://lsb2-images
+        uri: http://localhost:8200
         predicates:
         - Path=/comments/**
         filters:
