--- a/lsb2-comments.yml
+++ b/lsb2-comments.yml
@@ -22,14 +22,9 @@ management:
     defaults:
       enabled: true
 
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://user:password@localhost:8761/eureka/
-  
 spring:
+  session:
+    store-type: mongodb
   rabbitmq:
     host: ${RABBITMQ_HOST:localhost}
     port: ${RABBITMG_PORT:5672}
