--- a/lsb2-images.yml
+++ b/lsb2-images.yml
@@ -5,6 +5,7 @@ security:
 images:
   commentsUser: user
   commentsPassword: password
+  commentsUrl: http://localhost:9000
 #
 # details on endpoints: https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-endpoints.html#production-ready-endpoints-exposing-endpoints
 management:
@@ -21,17 +22,6 @@ management:
   health:
     defaults:
       enabled: true
-
-# tag::secured[]
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://user:password@localhost:8761/eureka/
-    instance:
-      hostname: lsb2-eureka-server
-# end::secured[]
 
 spring:
   cloud:
