feat(eureka): exclude eureka service from localhost runtime

--- a/lsb2-chat.yml
+++ b/lsb2-chat.yml
@@ -38,7 +38,7 @@ info:
   app:
     name: Chat Springboot Application with WebSockets
     description: Springboot - Thymeleaf Application with WebSocket Backend communication
-    version: ${project.version}
+    version: ${version}
   javaVersion: ${java.version}
 
 spring:
