fix(websocket): add reactive support

--- a/lsb2-chat.yml
+++ b/lsb2-chat.yml
@@ -42,6 +42,8 @@ info:
   javaVersion: ${java.version}
 
 spring:
+  main:
+    web-application-type: reactive 
   cloud:
     config:
       uri: http://localhost:8888
