--- a/lsb2-chat.yml
+++ b/lsb2-chat.yml
@@ -43,7 +43,8 @@ info:
 
 spring:
   main:
-    web-application-type: reactive 
+    web-application-type: reactive
+    allow-bean-definition-overriding: true
   cloud:
     config:
       uri: http://localhost:8888
