fix(spring): bean override config

--- a/lsb2-chat.yml
+++ b/lsb2-chat.yml
@@ -41,10 +41,9 @@ info:
     version: ${appversion}
   javaVersion: ${java.version}
 
+spring.main.web-application-type: reactive
+spring.main.allow-bean-definition-overriding: true
 spring:
-  main:
-    web-application-type: reactive
-    allow-bean-definition-overriding: true
   cloud:
     config:
       uri: http://localhost:8888
