fix(comments): set togglz access unsecure

--- a/lsb2-comments.yml
+++ b/lsb2-comments.yml
@@ -7,7 +7,7 @@ security:
 
 togglz:
   console:
-    secured: ${SECURE_TOGGLZ:true}
+    secured: false
     enabled: true
     path: /actuator/togglz
     use-management-port: false
