--- a/lsb2-chat-k8s.yml
+++ b/lsb2-chat-k8s.yml
@@ -9,7 +9,7 @@ eureka:
 spring:
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URI:http://lsb2-config-server}
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
   devtools:
     livereload:
       enabled: true
