--- a/lsb2-chat.yml
+++ b/lsb2-chat.yml
@@ -51,7 +51,7 @@ server:
 spring:
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
     gateway:
       discovery:
         locator:
