--- a/lsb2-images.yml
+++ b/lsb2-images.yml
@@ -26,7 +26,7 @@ management:
 spring:
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
     function:
       definition: emit
     stream:
