feat(build): upgrade springboot to 2.4.2

--- a/lsb2-chat.yml
+++ b/lsb2-chat.yml
@@ -49,6 +49,8 @@ security:
 server:
   port: 9999
 spring:
+  config:
+    use-legacy-processing: true  
   cloud:
     config:
       uri: ${CONFIG_SERVER_URI:http://localhost:8888}
