--- a/lsb2-comments.yml
+++ b/lsb2-comments.yml
@@ -36,6 +36,8 @@ management:
       enabled: true
 
 spring:
+  config:
+    use-legacy-processing: true  
   session:
     store-type: mongodb
   rabbitmq:
