--- a/lsb2-eureka.yml
+++ b/lsb2-eureka.yml
@@ -1,6 +1,8 @@
 server:
   port: 8761
 spring:
+  config:
+    use-legacy-processing: true  
   cloud:
     config:
       uri: ${CONFIG_SERVER_URI:http://localhost:8888}
