--- a/lsb2-hystrix-dashboard.yml
+++ b/lsb2-hystrix-dashboard.yml
@@ -28,6 +28,8 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 spring:
+  config:
+    use-legacy-processing: true  
   cloud:
     config:
       uri: ${CONFIG_SERVER_URI:http://localhost:8888}
